# w40k-explorer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  collect_urls.py  main.py  project-roadmap.md  pyproject.toml  pytest.ini  streamlit_app.py
migrations/: 2025_08_16_add_parsing_columns.py  2025_08_17_add_embedding_tracking.py
scripts/: check_parser.py  cleanup_database.py  collect_urls.py  fetch_sample_pages.py  generate_chunks.py  generate_embeddings.py  parse_articles.py  parse_sample_pages.py  run_evals.py  scrape_articles.py  test_chunker.py  test_embeddings.py  test_query_cli.py
src/database/: connection.py  models.py  operations.py  vector_operations.py
src/engine/: __init__.py  bootstrap.py  query_engine.py  types.py  utils.py
src/rag/: chunker.py  embeddings.py  vector_store.py
src/scraper/: http_client.py  url_collector.py
src/ui/: __init__.py  streamlit_app.py  utils.py
src/w40k/: __init__.py
src/w40k/adapters/: __init__.py
src/w40k/config/: factory.py  settings.py
src/w40k/core/: __init__.py  (+1 more)
tests/: conftest.py
tests/adapters/: test_anthropic_adapter.py  test_openai_adapter.py
tests/config/: test_factory.py
tests/fakes/: __init__.py  fake_llm.py  fake_vector_ops.py  fake_vector_service.py
tests/presentation/: test_streamlit_utils.py
tests/usecases/: test_answer_service_confidence_clamp.py  test_answer_service_json_happy.py  test_answer_service_non_json.py  test_answer_service_refusal.py  test_answer_service_retrieval_mmr.py  test_answer_service_threshold_relax.py  test_answer_service_truncation_retry.py  test_prompts.py
(+38 files in other folders)
